--- a/GitHubFiles/Project folder/CSS/Stylesheet.css
+++ b/GitHubFiles/Project folder/CSS/Stylesheet.css
@@ -1,4 +1,4 @@
-/* created by student x22223487 until line 202 */
+/* created by student x22223487  */
 
 @media (max-width: 600px) {
 
@@ -156,7 +156,7 @@ h2 {
     height: 100vh;
     bottom: 0;
     left: 0;
-    background: rgba(73, 58, 16, 0.53);
+    background: rgba(73, 58, 16, 0.821);
     object-fit: fill;
 }
 
