changes done to validate HTML

--- a/GitHubFiles/Project folder/CSS/Stylesheet.css
+++ b/GitHubFiles/Project folder/CSS/Stylesheet.css
@@ -16,8 +16,13 @@
 }
 
 a {
+
+    text-align: center;
+    padding-top: 1%;
+    padding: auto;
     text-decoration: none;
     color: black;
+
 }
 
 
