--- a/GitHubFiles/Project folder/CSS/Stylesheet.css
+++ b/GitHubFiles/Project folder/CSS/Stylesheet.css
@@ -292,9 +292,10 @@ h1 {
     color: goldenrod;
     text-align: center;
     font-family: 'Oswald', sans-serif
+    font-size: 150;
 }
 
-h2 {
+h3 {
     color: goldenrod;
     font-family: 'Oswald', sans-serif
     font-size: 150;
